--- a/src/content/docs/builders/tools/contracts/openzeppelin.mdx
+++ b/src/content/docs/builders/tools/contracts/openzeppelin.mdx
@@ -2,61 +2,37 @@
 title: OpenZeppelin
 description: Intro to OpenZeppelin
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
-import { Image } from 'astro:assets';
-import openzeppelin from '../../../../../assets/openzeppelin-wizard.png';
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-<ToolLayout
-	introParagraph="OpenZeppelin is renowned for its smart contracts, which adhere to industry standards and ensure robust security through comprehensive audits. These features give developers a high level of confidence and reliability when using OpenZeppelin for their projects.
-    OpenZeppelin contracts implement widely recognized industry standards, such as ERC-721 or ERC-20. Their extensive contracts variety and rigorous security audits make them an excellent starting point for all dApp developers."
-	toolName="OpenZeppelin"
-	toolLink="https://docs.openzeppelin.com/contracts/5.x/"
-	toolDocsLink="https://docs.openzeppelin.com/contracts/5.x/"
->
+OpenZeppelin is renowned for its smart contracts, which adhere to industry standards and ensure robust security through comprehensive audits. These features give developers a high level of confidence and reliability when using OpenZeppelin for their projects.
 
-### Implementation Example
+<CardGrid>
+  <LinkCard title="Website" href="https://www.openzeppelin.com/" />
+  <LinkCard title="Documentation" href="https://docs.openzeppelin.com/" />
+</CardGrid>
+
+
+## Features
+
+- **Battle-Tested Security:** Provides audited and widely-used smart contract templates, ensuring high reliability and security.
+
+- **Modular and Reusable Components:** Offers modular, reusable building blocks for creating tokens, access control, governance, and more.
+
+- **Standards Compliance:** Fully adheres to industry standards like ERC-20, ERC-721, and ERC-1155, simplifying integration and interoperability.
+
+## Quickstart
 
 <Steps>
 
-1. ##### Package Install
+1. Visit [OpenZeppelin Wizard](https://wizard.openzeppelin.com/).
 
-    <Tabs>
-        <TabItem label="npm">
-        ```shell
-        npm install @openzeppelin/contracts
-        ```
-        </TabItem>
-        <TabItem label="yarn">
-        ```shell
-        yarn add @openzeppelin/contracts
-        ```
-        </TabItem>
-    </Tabs>
+2. Create your own contract taking advantage of the contracts standards provided by OpenZeppelin.
 
-2. ##### Contract import
-
-    ```solidity
-    pragma solidity ^0.8.20;
-
-    import {ERC721} from "@openzeppelin/contracts/token/ERC721/ERC721.sol";
-
-    contract MyCollectible is ERC721 {
-        constructor() ERC721("MyCollectible", "MCO") {
-        }
-    }
-    ```
 </Steps>
 
-### OpenZeppelin Wizard
 
-OpenZeppelin Wizard is a user-friendly tool that allows developers to quickly generate secure and standardized smart contracts. By offering an intuitive interface and customizable options, it simplifies the process of creating contracts
 
-<Image src={openzeppelin} alt="OpenZeppelin Wizard"/>
 
-This tool is perfect for beginner web3 developers, allowing them to create, deploy, and interact with a smart contract in under two minutes. Additionally, the platform ensures adherence to proper smart contract programming practices.
-
-To test it please go to the [OpenZeppelin Wizard platform](https://wizard.openzeppelin.com/).
-
-</ToolLayout>
