--- a/src/content/docs/builders/tools/gaming/web3unreal.mdx
+++ b/src/content/docs/builders/tools/gaming/web3unreal.mdx
@@ -2,21 +2,32 @@
 title: Web3.unreal
 description: Intro to Web3.unreal
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
-<ToolLayout
-    introParagraph="Web3.unreal is a plugin that brings web3 functionality to desktop games built with Unreal Engine."
-    toolName="Web3.unreal"
-    toolLink="https://web3unreal.readthedocs.io/en/latest/index.html"
-    toolDocsLink="https://web3unreal.readthedocs.io/en/latest/index.html"
->
+import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-Some of the features are:
-- Interaction with remote node via JSON RPC
-- Smart-contract ABI parsing
-- Smart contracts interactions 
-- Support of common EIPs and ERCs
+Web3.unreal is a plugin that brings web3 functionality to desktop games built with Unreal Engine.
+
+<CardGrid>
+  <LinkCard title="Website" href="https://w3unreal.com/" />
+  <LinkCard title="Documentation" href="https://web3unreal.readthedocs.io/en/latest/index.html" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
+## Features
+
+- **EVM compatibility:** Provides interaction with all EVM based chains as well as its smart contracts.
+
+- **Hyperplay:** Direct Hyperplay integrations.
+
+## Quickstart
+
+<Steps>
+
+1. Follow the Web3.unreal quickstart [guide](https://web3unreal.readthedocs.io/en/latest/quickstart.html).
 
 
-</ToolLayout>
+</Steps>
+
+
