--- a/src/content/docs/builders/tools/index.mdx
+++ b/src/content/docs/builders/tools/index.mdx
@@ -18,4 +18,4 @@ The tools section covers available tooling for developing on SKALE. This include
 />
 
 
-<Tools categories={['Wallets', 'Bridges', 'Data', 'NFTs', 'Payments', 'Randomness', 'Oracles','Contracts', 'Libraries' ,'Gaming', 'All In One']} client:load/>
+<Tools categories={['All In One','Bridges','Contracts','Data','Gaming','Libraries','NFTs','Oracles','Payments','Wallets','Randomness']} client:load/>
