--- a/src/content/docs/builders/tools/libraries/web3dart.mdx
+++ b/src/content/docs/builders/tools/libraries/web3dart.mdx
@@ -2,104 +2,44 @@
 title: Web3Dart
 description: Intro to Web3Dart
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+
+Library written in dart that enables interaction with EVM compatible blockchains.
+
+<CardGrid>
+  <LinkCard title="Website" href="https://pub.dev/packages/web3dart" />
+  <LinkCard title="Documentation" href="https://pub.dev/packages/web3dart" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
 
-<ToolLayout
-	introParagraph="Library written in dart that enables interaction with EVM compatible blockchains."
-	toolName="Web3Dart"
-	toolLink="https://pub.dev/packages/web3dart"
-	toolDocsLink="https://pub.dev/packages/web3dart"
->
+## Features
 
-#### Some of the features of the library are:
+- **Dart Integration:** Enables seamless interaction with Ethereum blockchain directly in Dart and Flutter applications.
 
-- Send signed transactions
-- Generate new wallets
-- Call functions on smart contracts and listen for contract events
-- Code generation based on smart contract ABI for easier interaction
+- **EVM Compatibility:** Provides tools for signing, sending, and managing Ethereum type transactions from mobile or web environments.
 
-## Implementation Example
+- **Smart Contract Support:** Simplifies calling smart contracts and decoding ABI data within Flutter and Dart-based projects.
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
+
+1. Install the package:
+
     ```shell
     dart pub add web3dart
     ```
 
-2. ##### Contract Call
-    ```dart
-    // ignore_for_file: public_member_api_docs
-    import 'dart:io';
+2. Create your contract
 
-    import 'package:http/http.dart';
-    import 'package:web3dart/web3dart.dart';
-    import 'package:path/path.dart' show join, dirname;
-    import 'package:web_socket_channel/io.dart';
-    import 'chains.dart';
+3. Call your contract file by running the command:
 
-    //Private Key
-    const String privateKey ='your pk';
-
-    //Select which chain you want to use
-    Chain? selected_SKALE_chain = chains[ChainKey.nebula];
-
-    // SKALE Chain RPC
-    String rpcUrl = selected_SKALE_chain?.chainInfo?.testnet.rpcUrl ?? "no url";
-    // selected SKALE Chain ID
-    int chainId = selected_SKALE_chain?.chainInfo?.testnet.chainId ?? 0;
-
-    // ABI of ERC_721 example contract
-    final File abiFile = File(join(dirname(Platform.script.path), 'abi.json'));
-
-
-    Future<void> main() async {
-
-      // start a client we can use to send transactions
-      final client = Web3Client(rpcUrl, Client());
-
-      final EthereumAddress mint_to_address = EthereumAddress.fromHex('address to mint to');
-
-      String address = selected_SKALE_chain?.chainInfo?.testnet.contracts[0].address ?? "no address";
-
-      final EthereumAddress contract_address = EthereumAddress.fromHex(address);
-      
-      //Credentials to sign tx
-      final credentials = EthPrivateKey.fromHex(privateKey);
-
-      //ABI file as string
-      final abiCode = await abiFile.readAsString();
-      
-      final contract = DeployedContract(ContractAbi.fromJson(abiCode, 'MyToken'), contract_address);
-      //Selected contract function to call
-      final mintFunction = contract.function('mintTest');
-
-      // Mint function call
-      //Note: The chainId needs to be passes otherwise it will throw the error: -32004 Invalid transaction signature.
-      final tx = await client.sendTransaction(
-        credentials,
-        Transaction.callContract(
-          contract: contract,
-          function: mintFunction,
-          parameters: [mint_to_address],
-        ),
-        chainId: chainId
-      );
-
-      // Transaction Receipt
-      final receipt = await client.addedBlocks().asyncMap((_) => client.getTransactionReceipt(tx)).firstWhere((receipt) => receipt != null);
-      print(receipt);
-
-      await client.dispose();
-    }
-    ```
-
-3. ##### Run
     ```shell
-    dart web/main.dart 
+    dart web/_name-of-your-file_.dart 
     ```
-</Steps>
 
-</ToolLayout>
+</Steps>
