--- a/src/content/docs/builders/tools/wallets/invisible-signer.mdx
+++ b/src/content/docs/builders/tools/wallets/invisible-signer.mdx
@@ -2,176 +2,54 @@
 title: Invisible Signers
 description: Intro to Invisible Signers
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="Thanks to the zero gas fees nature of the SKALE chains projects can perform transactions on behalf of the users without compromising the company sustainability by covering huge gas fees costs. In order to achieve the described above, the application can generate on the background a wallet for each user, distribute the free gas token to it and store it on the backend.
-    Every time a user performs a transaction, the background wallet signs the transaction without the user having idea he just made a on-chain transaction."
-    toolName="Invisible Signers"
-    toolLink=""
-    toolDocsLink=""
->
+Thanks to the zero gas fees nature of the SKALE chains projects can perform transactions on behalf of the users without compromising the company sustainability by covering huge gas fees costs. In order to achieve the described above, the application can generate on the background a wallet for each user, distribute the free gas token to it and store it on the backend.
+Every time a user performs a transaction, the background wallet signs the transaction without the user having idea he just made a on-chain transaction.
+
+<CardGrid>
+  <LinkCard title="Theory" href="#theory" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
 
-## Implementation Example
+## Features
 
-This [codebase](https://github.com/skalenetwork/recipes/tree/recipe-api-background-signer/typescript) uses the Typescript language along with the Viem library to showcase a proof of concept on how to utilize background signers within an API or Server based environment. 
+- **Background Signing:** Uses Viem to sign transactions in the background, making dApp interactions faster and smoother.  
 
-This example also uses a sticky session per userId meaning that the randomly generated accounts are mapped 1:1 with a userId. This will persist only for the duration of the service lifetime. On application crash or restart new wallets will be created. To resolve these types of issues you can encrypt the private keys and store them in something like Redis to make a more sophisticated service that would also allow for multiple AZ usage.
+- **Session-Based Wallets:** Assigns a unique wallet to each user for the session, ensuring consistent and hassle-free usage.  
+
+- **Scalable Storage Options:** Can store encrypted private keys in tools like Redis for better reliability and scalability.  
+
+- **No fee costs:** Due to the valuless nature of sFUEL this solution can be implemented without incurring in any subsidizing gas fees costs.
+
+## Quickstart
 
 <Steps>
-1. ##### Custodian Class
 
-    ````typescript
-    import { initializeCustodian } from "./utils";
-    import { createClient } from "./utils";
-    import { CUSTODIAN_PRIVATE_KEY, WSS_URL } from "./config";
-    import { parseEther } from "viem";
+1. Run the command:
 
-    const DEFAULT_FILL_UP_VALUE: bigint = parseEther("0.00000002");
+    ```sh
+    git clone -b recipe-api-background-signer git@github.com:skalenetwork/recipes.git && cd recipes
+    ```
 
-    class Custodian {
-        #nonce = 0;
-        #custodian;
-        #client;
+2. Add the necessary environment variables to a .env file
+    ```sh
+    cp .env.example .env
+    ```
+3. Run the application locally:
 
-        constructor() {
-            this.#custodian = initializeCustodian(CUSTODIAN_PRIVATE_KEY as `0x${string}`);
-            this.#client = createClient(WSS_URL);
-        }
+    ```sh
+    npm run dev
+    ```
 
-        public get custodian() {
-            return this.#custodian;
-        }
-
-        public get client() {
-            return this.#client;
-        }
-
-        public async isValidCustodian() {
-            const balance = await this.#client.getBalance({
-                address: this.#custodian.account.address
-            });
-
-            if (balance < parseEther("0.00005")) {
-                throw new Error("Custodian Balance must be > 0.00005");
-            }
-
-            this.#nonce = await this.#client.getTransactionCount({
-                address: this.#custodian.account.address
-            });
-        }
-
-        public async distribute(to: `0x${string}`) {
-            const hash = await this.#custodian.sendTransaction({
-                to,
-                value: DEFAULT_FILL_UP_VALUE,
-                nonce: this.#nonce++
-            });
-            const tx = await this.#client.waitForTransactionReceipt({
-                hash
-            });
-        }
-    }
-    export default new Custodian();
-
-    ````
-
-2. ##### Background Signers 
-
-    ````typescript
-    import { WalletClient, getAddress, parseAbi } from "viem";
-    import Custodian from "./custodian";
-    import { createSigner } from "./utils";
-    import { skaleChaosTestnet } from "viem/chains";
-    import { Contract } from "./contract";
-
-    class BackgroundSigners {
-        #custodian: typeof Custodian;
-        #signers: {[key: string]: WalletClient} = {};
-
-        constructor() {
-            this.#custodian = Custodian;
-        }
-
-        
-        public async getUser(userId: string) {
-            if (this.#signers[userId] === undefined) {
-                const signer = createSigner();
-                this.#signers[userId] = signer;
-                await this.#custodian.distribute(signer.account.address);
-                
-            }
-            
-            return this.#signers[userId].account?.address as `0x${string}`;
-        }
-
-        public async remove(userId: string) {
-            const account = this.#signers[userId].account;
-            if (!account) return;
-            this.#signers[userId].sendTransaction({
-                to: this.#custodian.custodian.account.address,
-                value: BigInt(1),
-                type: "legacy",
-                account,
-                chain: skaleChaosTestnet
-            });
-        }
-
-        public async backgroundSignerAction(userId: string, args: any[], functionName: "mint" | "burn") {
-            const account = this.#signers[userId].account;
-            if (!account) throw new Error("Account Not Found");
-
-            await this.#signers[userId].writeContract({
-                abi: Contract.abi,
-                address: getAddress(Contract.address),
-                functionName,
-                args,
-                account,
-                chain: skaleChaosTestnet
-            })
-        }
-    }
-
-    export default new BackgroundSigners();
-    ````
-
-3. ###### API
-
-    ````typescript
-    import { Router } from "express";
-    import BackgroundSigners from "./background_signers";
-    import { parseEther } from "viem";
-
-    const router = Router();
-
-    router.post("/mint", async (req, res) => {
-        const userId: string = req.body.userId;
-        const address = await BackgroundSigners.getUser(userId);
-        
-        try {
-            await BackgroundSigners.backgroundSignerAction(userId, [address, parseEther("1")], "mint");
-            return res.status(200).send("Minted Successfully");
-        } catch (err) {
-            return res.status(500).send("Error Minting");
-        }
-    });
-
-    router.post("/burn", async (req, res) => {
-        const userId: string = req.body.userId;
-        const address = await BackgroundSigners.getUser(userId);
-        
-        try {
-            await BackgroundSigners.backgroundSignerAction(userId, [parseEther("1")], "burn");
-            return res.status(200).send("Burned Successfully");
-        } catch (err) {
-            return res.status(500).send("Error Burning");
-        }
-    });
-
-    export default router;
-    ````
 </Steps>
 
-</ToolLayout>
+## Theory
+
+This codebase uses the Typescript language along with the Viem library to showcase a proof of concept on how to utilize background signers within an API or Server based environment. This can be a useful strategy when working to improve the UX of your dApp by reducing clicks.
+
+This example also uses a sticky session per userId meaning that the randomly generated accounts are mapped 1:1 with a userId. This will persist only for the duration of the service liftetime. On application crash or restart new wallets will be created. To resolve these types of issues you can encrypt the private keys and store them in something like Redis to make a more sophisticated service that would also allow for multiple AZ usage.
