--- a/src/content/docs/builders/tools/data/subsquid.mdx
+++ b/src/content/docs/builders/tools/data/subsquid.mdx
@@ -2,21 +2,39 @@
 title: Subsquid
 description: Intro to Subsquid
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
-<ToolLayout
-	introParagraph="Subsquid is a query node framework that can be applied to SKALE Chains.
-	Subsquid is like an ETL (Extract, Transform, and Load) tool.
-	Developers can use Subsquid to extract SKALE chain data and process EVM logs in one project and serve this data on a GraphQL endpoint."
-	toolName="Subsquid"
-	toolLink="https://subsquid.io/"
-	toolDocsLink="https://docs.subsquid.io/"
->
+import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+
+Subsquid is a query node framework that can be applied to SKALE Chains.
+
+Developers can use Subsquid to extract SKALE Nebula chain data and process EVM logs in one project and serve this data on a GraphQL endpoint.
+
+<CardGrid>
+  <LinkCard title="Website" href="https://subsquid.io" />
+  <LinkCard title="Documentation" href="https://docs.subsquid.io/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
+## Features
+
+- **Flexible Data Indexing:** Offers customizable indexing pipelines to extract and transform blockchain data tailored to your specific needs.
+
+- **High-Performance Querying:** Provides fast and efficient GraphQL APIs for querying large-scale blockchain data with ease.
+
+- **Data Hosting:** Subsquid hosts data on belhalf of the developer.
+
+- **SKALE Nebula Hub:** Subsquid is available to be used on SKALE Nebula both mainnet and testnet.
+
+## Quickstart
+
+<Steps>
+
+1. Head [here](https://docs.sqd.ai/subsquid-network/reference/networks/) to find SKALE Nebula specific information.
+
+2. Follow [here](https://docs.sqd.ai/subsquid-network/reference/evm-api/) for next steps.
+
+</Steps>
 
 
-| Mainnet Endpoints | Endpoint lookup cmd | Archive Endpoint |
-| --------- | --------- | --------- |
-| SKALE Nebula Hub | `lookupArchive('skale-nebula')` | `https://v2.archive.subsquid.io/network/skale-nebula` |
-
-</ToolLayout>
