--- a/src/content/docs/builders/tools/gaming/mirage.mdx
+++ b/src/content/docs/builders/tools/gaming/mirage.mdx
@@ -2,85 +2,56 @@
 title: Mirage SDK
 description: Intro to Mirage SDK
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="The Mirage platform serves as a gateway to a comprehensive suite of proven solutions tailored for the development, enhancement, scalability, support, and publication of Web3 games."
-    toolName="Mirage SDK"
-    toolLink="https://mirage.xyz/docs/"
-    toolDocsLink="https://mirage.xyz/docs/"
->
+The Mirage platform serves as a gateway to a comprehensive suite of proven solutions tailored for the development, enhancement, scalability, support, and publication of Web3 games.
 
-The SDKs for both platforms are EVM compatible and have the following features:
-- Interaction with Web3 wallets (either WalletConnect or MetaMask) for all supported platforms
-- Interaction with EVM-compatible blockchains
-- Interaction with smart contracts
+<CardGrid>
+  <LinkCard title="Website" href="https://mirage.xyz/plaza/home" />
+  <LinkCard title="Documentation" href="https://mirage.xyz/docs/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
-## Implementation Example
+## Features
 
-<Tabs>
-<TabItem label="Unity">
+- **EVM compatibility:** Provides interaction with all EVM based chains as well as its smart contracts.
+
+- **Develepment platforms:** The SDK supports both Unity and Unreal.
+
+- **Wallets:** Integrates WalletConnect
+
+- **Platforms:** Supports mobile, webGL and standlone projects.
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
-    On Package Manager select `Add package from git URL` and add the following:
-    ```
-    https://github.com/Ankr-network/game-unity-sdk.git?path=Assets/MirageSDK
-    ```
-2. ##### Scene Creation
-    1. Go to Packages -> Examples -> Scenes -> Examples_WebGL.unity 
-    2. Copy and paste that scene into your Assets folder
 
-3. ##### Assets Setup
-    1. (optional) Create a scriptable object with the following properties: contract address, contract ABI and SKALE chain RPC.
-    2. Create a script to call the contract you deployed on one of the SKALE chains
+1. Get the SDK on:  
+    
+    <Tabs>
+		<TabItem label="Unity">
+			Get it [here](https://mirage.xyz/docs/unity-sdk/setting-up/).
+		</TabItem>
+		<TabItem label="Unreal">
+		    Unreal Engine v4 get it [here](https://mirage.xyz/docs/unreal-sdk/setting-up/unreal-sdk-4/).
+		    
+			Unreal Engine v5 get it [here](https://mirage.xyz/docs/unreal-sdk/setting-up/unreal-sdk-5/).
+		</TabItem>
+	</Tabs>
 
-4. ##### Contract Call
-    ```c#
-    public class NFTMint : UseCaseBodyUI
-    {
-        public Contract contract;
-        private const string MintMethodName = "safeMint";
-        private IContract _erc721Contract;
-        private IEthHandler _eth;
-
-
-        private string[] contractArgs = new string[] { "0x...someAddress" };
-
-
-        public void ContractSetup()
-        {
-            var sdkInstance = MirageSDKFactory.GetMirageSDKInstance(contract.RPC);
-
-            _erc721Contract =
-                sdkInstance.GetContract(
-                    contract.contractAddress,
-                    contract.contractABI);
-            _eth = sdkInstance.Eth;
-
-        }
-
-        public async void SmartContractCall()
-        {
-            var receipt = await _erc721Contract.CallMethod(MintMethodName, contractArgs);
-            Debug.Log($"Receipt: {receipt}");
-
-            var trx = await _eth.GetTransaction(receipt);
-
-            Debug.Log($"Nonce: {trx.Nonce}");
-        }
-    }
-    ```
-
-5. ##### NFTMint call
-    1. Call contract setup method to initialize the contract instance
-    2. Call the `SmartContractCall` function to perform the contract call
+2. Follow the guide:
+    
+    <Tabs>
+		<TabItem label="Unity">
+			Unity [Guide](https://mirage.xyz/docs/unity-sdk/getting-started/connect-wallet/).
+		</TabItem>
+		<TabItem label="Unreal">
+		    Unreal [Guide](https://mirage.xyz/docs/unreal-sdk/getting-started/before-you-start/).
+		</TabItem>
+	</Tabs>
 
 </Steps>
-
-</TabItem>
-</Tabs>
-
-</ToolLayout>
