--- a/src/content/docs/builders/tools/libraries/ethersv5.mdx
+++ b/src/content/docs/builders/tools/libraries/ethersv5.mdx
@@ -2,72 +2,51 @@
 title: EthersV5
 description: Intro to EthersV5
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="The ethers.js library is a comprehensive and concise library for engaging with the Ethereum Blockchain and its surrounding ecosystem."
-    toolName="EthersV5"
-    toolLink="https://docs.ethers.org/v5/"
-    toolDocsLink="https://docs.ethers.org/v5/"
->
+The ethers.js library is a comprehensive and concise library for engaging with the Ethereum Blockchain and its surrounding ecosystem.
 
+<CardGrid>
+  <LinkCard title="Website" href="https://docs.ethers.org/v5/" />
+  <LinkCard title="Documentation" href="https://docs.ethers.org/v5/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
-Some of the main features are:
-- Import and export JSON wallets (Geth, Parity and crowdsale)
-- Import and export BIP 39 mnemonic phrases (12 word backup phrases) and HD Wallets
-- Meta-classes create JavaScript objects from any contract ABI, including ABIv2 and Human-Readable ABI
-Connect to Ethereum nodes over JSON-RPC, INFURA, Etherscan, Alchemy or Metamask
+## Features
 
-## Implementation Example
+- **Comprehensive Wallet API:** Provides robust functionality for creating, managing, and interacting with Ethereum wallets, including signing transactions and messages.
+
+- **Modular and Lightweight Design:** Offers a highly modular architecture, enabling developers to use only the required components, keeping applications lightweight and efficient.
+
+- **Extensive Provider Support:** Supports various Ethereum providers, such as JSON-RPC, WebSocket, and third-party services like Infura and Alchemy, for seamless blockchain interactions.
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
+
+1. Install the package:
+
     <Tabs>
-    <TabItem label="npm">
-    ```shell
-    npm install ethers@5.7.2
-    ```
-    </TabItem>
-    <TabItem label="yarn">
-    ```shell
-    yarn add ethers@5.7.2
-    ```
-    </TabItem>
+        <TabItem label="npm">
+        ```shell
+        npm install ethers@5.7.2
+        ```
+        </TabItem>
+        <TabItem label="yarn">
+        ```shell
+            yarn add ethers@5.7.2
+        ```
+        </TabItem>
     </Tabs>
 
-2. ##### Contract Call
-    ```typescript
-    import { ethers, BigNumber } from 'ethers';
-    import { abi } from "./contract";
-    import { chains } from "./chains"
-    import dotenv from 'dotenv';
-    dotenv.config();
+2. Import the library and start using it:
 
-    //Select the SKALE chain you want to use
-    const selectedChain = chains.nebula;
-
-    const provider = new ethers.providers.JsonRpcProvider(selectedChain.chainInfo.testnet.rpcUrl);
-
-    const pk = process.env.PRIVATE_KEY || "";
-    const signer = new ethers.Wallet(pk, provider);
-
-    const contract = new ethers.Contract(selectedChain.chainInfo.testnet.contracts[0].address, abi, signer);
-
-    // Send transaction to smart contract to update message
-    async function ContractSendTx() {
-        const data = await contract.populateTransaction.mintTest(signer.address);
-        data.gasLimit = BigNumber.from(100000);
-        data.gasPrice = BigNumber.from(100000);
-        data.nonce = await provider.getTransactionCount(signer.address);
-
-        const approveTxSigned = await signer.signTransaction(data);
-        const submittedTx = await provider.sendTransaction(approveTxSigned);
-        const approveReceipt = await submittedTx.wait();
-        console.log(approveReceipt.transactionHash);    
-    }
-
+    ```ts
+    import { ethers } from 'ethers';
     ```
+
 </Steps>
-</ToolLayout>
