--- a/src/content/docs/builders/tools/libraries/viem.mdx
+++ b/src/content/docs/builders/tools/libraries/viem.mdx
@@ -2,26 +2,34 @@
 title: Viem
 description: Intro to Viem
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="Viem is a TypeScript interface for Ethereum that provides low-level stateless primitives for interacting with Ethereum."
-    toolName="Viem"
-    toolLink="https://viem.sh/"
-    toolDocsLink="https://viem.sh/"
->
+Viem is a TypeScript interface for Ethereum that provides low-level stateless primitives for interacting with Ethereum.
 
-Some of the main features are:
-- Abstractions over the JSON-RPC API 
-- APIs for interacting with Smart Contracts
-- Utilities for working with ABIs
+<CardGrid>
+  <LinkCard title="Website" href="https://viem.sh" />
+  <LinkCard title="Documentation" href="https://viem.sh/docs/getting-started" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
-## Implementation Example
+
+## Features
+
+- **Comprehensive Tooling:** Offers utilities for ABI encoding/decoding, contract interaction, and transaction signing with high precision and accuracy.
+
+- **Improved Developer Experience:** Provides excellent TypeScript support, intuitive APIs, and enhanced error handling for smoother development workflows.
+
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
+
+1. Install the package:
+
     <Tabs>
     <TabItem label="npm">
     ```shell
@@ -35,47 +43,11 @@ Some of the main features are:
     </TabItem>
     </Tabs>
 
+2. Import the necessary libraries into your project:
 
-2. ##### Contract Call
+    **Example**
     ```typescript
     import { createWalletClient , custom , http , createPublicClient } from 'viem'
-    import { privateKeyToAccount } from 'viem/accounts'
-    import { skaleNebulaTestnet } from "viem/chains";
-    import { abi } from "./contract";
-    import dotenv from 'dotenv';
-    dotenv.config();
-
-    const publicClient = createPublicClient({
-        chain: skaleNebulaTestnet,
-        transport: http()
-      })
-
-    const pk = process.env.PRIVATE_KEY || "";
-    const account = privateKeyToAccount(`0x${pk}`);
-
-    //Place here the contract address you deployed
-    const contract_address = "0x4487AF7f18044A99927e81CC628F558F3D091419";
-
-    const walletClient = createWalletClient({
-        chain: skaleNebulaTestnet,
-        transport: http(),
-      })
-
-
-    // Send transaction to smart contract to update message
-    async function ContractSendTx() {    
-        
-        const { request } = await publicClient.simulateContract({
-            address: contract_address,
-            abi: abi,
-            functionName: 'mintTest',
-            args: [account.address],
-            account
-          })
-        const tx =  await walletClient.writeContract(request)
-        console.log(tx);
-    }
     ```
-</Steps>
 
-</ToolLayout>
+</Steps>
