--- a/src/content/docs/builders/tools/libraries/web3j.mdx
+++ b/src/content/docs/builders/tools/libraries/web3j.mdx
@@ -2,85 +2,54 @@
 title: Web3j
 description: Intro to Web3j
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-<ToolLayout
-	introParagraph="Web3j is a modular, reactive, type safe Java and Android library for working with Smart Contracts and integrating with clients (nodes) on the Ethereum network."
-	toolName="Web3j"
-	toolLink="https://docs.web3j.io/4.10.0/"
-	toolDocsLink="https://docs.web3j.io/4.10.0/"
->
+Web3j is a modular, reactive, type safe Java and Android library for working with Smart Contracts and integrating with clients (nodes) on the Ethereum network.
 
-#### Some of the features are:
+<CardGrid>
+  <LinkCard title="Website" href="https://docs.web3j.io/4.10.0/" />
+  <LinkCard title="Documentation" href="https://docs.web3j.io/4.10.0/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
-- Complete implementation of Ethereum's [JSON-RPC](https://eth.wiki/json-rpc/API) client API over HTTP and IPC
-- Ethereum wallet support
-- Auto-generation of Java smart contract wrappers to create, deploy, transact with and call smart contracts from native Java code 
-- Support for ERC20 and ERC721 token standards
 
-## Implementation Example
+## Features
+
+- **Java & Kotlin Compatibility:** A powerful Ethereum library for Java and Kotlin, enabling integration in Android and server-side applications.
+
+- **Smart Contract Wrappers:** Auto-generates Java classes for interacting with Ethereum smart contracts, streamlining development.
+
+- **Event Monitoring:** Provides built-in support for listening to blockchain events and logs in real-time.
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
+
+1. Install the package:
 
    ```shell
    curl -L get.web3j.io | sh && source ~/.web3j/source.sh
    ```
 
-2. ##### Create a project
+2. Create a project:
+
    ```shell
    web3j new
    ```
-3. ##### Generate a Wallet
+
+3. Generate a Wallet:
+
    ```shell
    web3j wallet create
    ```
+4. Create a contract
 
-4. ##### Contract Call
+5. Call your contract script by running the command:
 
-   ```java
-   package org.web3j;
-
-   import org.web3j.protocol.core.methods.response.TransactionReceipt;
-   import org.web3j.crypto.Credentials;
-   import org.web3j.crypto.WalletUtils;
-   import org.web3j.generated.contracts.NFT_721;
-   import org.web3j.protocol.Web3j;
-   import org.web3j.protocol.http.HttpService;
-   import org.web3j.tx.gas.StaticGasProvider;
-   import java.math.BigInteger;
-
-
-   public class Web3App {
-
-      private static final String nodeUrl = System.getenv().getOrDefault("WEB3J_NODE_URL", "<node_url>");
-      private static final String walletPassword = System.getenv().getOrDefault("WEB3J_WALLET_PASSWORD", "<wallet_password>");
-      private static final String walletPath = System.getenv().getOrDefault("WEB3J_WALLET_PATH", "<wallet_path>");
-
-      public static final BigInteger gasLimit = BigInteger.valueOf(5_000_000);
-      public static final BigInteger gasPrice = BigInteger.valueOf(1_000_00);
-
-      public static String address = "some address";
-
-      public static void main(String[] args) throws Exception {
-
-         Credentials credentials = WalletUtils.loadCredentials(walletPassword, walletPath);
-         Web3j web3j = Web3j.build(new HttpService(nodeUrl));
-
-         NFT_721 nft = NFT_721.deploy(web3j, credentials, new StaticGasProvider(gasPrice, gasLimit)).send();
-         System.out.println("Contract address: " + nft.getContractAddress());
-
-         TransactionReceipt mint_receipt = nft._mintTest(address).send();
-         System.out.println("Tx has "+ mint_receipt.getTransactionHash());
-      }
-   }
-   ```
-
-5. ##### Run
    ```shell
    web3j run your_skale_rpc <wallet_path> <wallet_password>
    ```
 </Steps>
-</ToolLayout>
