--- a/src/content/docs/builders/tools/libraries/web3js.mdx
+++ b/src/content/docs/builders/tools/libraries/web3js.mdx
@@ -2,27 +2,34 @@
 title: Web3.js
 description: Intro to Web3.js
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="Set of Javascript libraries enabling interaction with a local or remote Ethereum node through HTTP, IPC, or WebSocket protocols."
-    toolName="Web3.js"
-    toolLink="https://docs.web3js.org/"
-    toolDocsLink="https://docs.web3js.org/"
->
+Set of Javascript libraries enabling interaction with a local or remote Ethereum node through HTTP, IPC, or WebSocket protocols.
 
-Some of the features are:
+<CardGrid>
+  <LinkCard title="Website" href="https://www.web3js.org/" />
+  <LinkCard title="Documentation" href="https://docs.web3js.org/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
-- Complete implementation of Ethereum's JSON-RPC client API over HTTP and IPC
-- Create accounts, process and sign transactions.
-- Get block and state information from Ethereum nodes.
 
-## Implementation Example
+## Features
+
+- **Ethereum API:** Offers a full suite of tools for interacting with Ethereum nodes using JSON-RPC, WebSocket, or IPC.
+
+- **Smart Contract:** Supports seamless deployment and interaction with smart contracts via ABI encoding/decoding.
+
+- **Ecosystem:** Compatible with browsers, Node.js, and various Ethereum networks, making it highly versatile.
+
+## Quickstart
 
 <Steps>
-1. ##### Package install
+
+1. Install the package:
     <Tabs>
     <TabItem label="npm">
     ```shell
@@ -36,50 +43,10 @@ Some of the features are:
     </TabItem>
     </Tabs>
 
+2. Import the library and start using it:
 
-2. ##### Contract Call
-    ```typescript
-    import Web3 from "web3";
-    import { abi } from "./contract";
-    import { chains } from "./chains"
-    import dotenv from 'dotenv';
-    dotenv.config();
-
-    //Select which SKALE chain to use
-    const selectedChain = chains.nebula;
-
-    var web3 = new Web3(selectedChain.chainInfo.testnet.rpcUrl);
-
-    const pk = process.env.PRIVATE_KEY || "";
-
-    const accountAddress = web3.eth.accounts.privateKeyToAccount(`0x${pk}`)
-
-    const contract = new web3.eth.Contract(abi, selectedChain.chainInfo.testnet.contracts[0].address);
-
-    const functionData = contract.methods.mintTest(accountAddress.address).encodeABI();
-
-    // Send transaction to smart contract to update message
-    async function ContractSendTx() {
-        web3.eth.accounts.signTransaction( 
-            {
-              from: accountAddress.address,
-              to: contract_address,
-              gas: 100000,
-              gasPrice: 100000,
-              data: functionData,
-            }, 
-            pk)
-            .then((signedTransaction) => {
-              return web3.eth.sendSignedTransaction(signedTransaction.rawTransaction || "");
-            })
-            .then((receipt) => {
-              console.log("Transaction receipt:", receipt);
-            })
-            .catch((error) => {
-              console.error("Error sending transaction:", error);
-            });
-    }
+    ```ts
+    import Web3 from "web3"
     ```
-</Steps>
 
-</ToolLayout>
+</Steps>
