--- a/src/content/docs/builders/tools/nfts/keepsake.mdx
+++ b/src/content/docs/builders/tools/nfts/keepsake.mdx
@@ -2,24 +2,34 @@
 title: KeepSake
 description: Intro to KeepSake
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
-<ToolLayout
-    introParagraph="Keepsake is an NFT marketplace that incorporates unique features of the SKALE ecosystem, enhancing user navigation. Notably, it includes an embedded SKALE native bridging feature, allowing users to bridge various tokens between SKALE chains at no cost."
-    toolName="Keepsake"
-    toolLink=""
-    toolDocsLink=""
->
+import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-Some of the main features are:
+Keepsake is an NFT marketplace that incorporates unique features of the SKALE ecosystem, enhancing user navigation. Notably, it includes an embedded SKALE native bridging feature, allowing users to bridge various tokens between SKALE chains at no cost.
 
-|Payments|Embedded Bridging|Launchpad|
-|-|-|-|
-| USDC | SKALE IMA Bridge | No |
+<CardGrid>
+  <LinkCard title="Calyso Website" href="https://calypso.keepsake.gg/" />
+  <LinkCard title="Nebula Website" href="https://nebula.keepsake.gg/" />
+</CardGrid>
 
+## Features
 
-For more information please check one of the two marketplaces:
-- [Keepsake Calypso Marketplace](https://calypso.keepsake.gg/)
-- [Keepsake Nebula Marketplace](https://keepsake.gg/)
+- **Payments:** Marketplace with supporting payments in USDC.
 
-</ToolLayout>
+- **Bridging:** Integration with SKALE Native bridge to move USDC between chains.
+
+- **Tokens:** Support both ERC-1155 and ERC-721 tokens.
+
+## Quickstart
+
+<Steps>
+
+1. Go to the Keepsake marketplace. Select the Calypso or Nebula one.
+
+2. Connect a wallet.
+
+3. Start using the marketplace.
+
+</Steps>
