--- a/src/content/docs/builders/tools/oracles/razor.mdx
+++ b/src/content/docs/builders/tools/oracles/razor.mdx
@@ -2,51 +2,33 @@
 title: Razor Network
 description: Razor Network
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
-<ToolLayout
-	introParagraph="Razor Network is a decentralized oracle network offering price-feed data to applications. This can be utilized in various actions throughout DeFi and other more general Web3 use cases. Razor is available on the Calypso, Nebula, Titan Mainnet, and Testnets."
-	toolName="Razor Network"
-	toolLink="https://razor.network/"
-	toolDocsLink="https://docs.razor.network/docs/consume-data-feeds/introduction"
->
-## Implementation Example
+import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-To consume the Razor Network price feeds, your contract should reference ITransparentForwarder. This is an interface that defines the external functions implemented by Data Feeds
+Razor Network is a decentralized oracle network offering price-feed data to applications. This can be utilized in various actions throughout DeFi and other more general Web3 use cases. Razor is available on the Calypso, Nebula, Titan Mainnet, and Testnets.
 
-```solidity
-pragma solidity ^0.8.0;
-interface ITransparentForwarder {
-    /**
-     * @dev using the hash of collection name, clients can query the result of that collection
-     * @param _name bytes32 hash of the collection name
-     * @return result of the collection and its power
-     */
-    function getResult(bytes32 _name) external payable returns (uint256, int8);
-}
-contract DataFeed {
-    ITransparentForwarder public transparentForwarder;
-    uint256 public latestResult;
-    int8 public latestPower;
+<CardGrid>
+  <LinkCard title="Website" href="https://razor.network/" />
+  <LinkCard title="Documentation" href="https://docs.razor.network/docs/consume-data-feeds/introduction" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
-    constructor() {
-        transparentForwarder = ITransparentForwarder(
-            /* Transparent Forwarder contract address deployed on respective chains */
-        );
-    }
-    /// @notice fetch collection result by name
-    /// @param name bytes32 hash of the collection name
-    /// @return result of the collection and its power
-    /// @return power
-    function getResult(bytes32 name) public payable returns (uint256, int8) {
-        (uint256 result, int8 power) = transparentForwarder.getResult{
-            value: msg.value
-        }(name);
-        latestResult = result;
-        latestPower = power;
-        return (result, power);
-    }
-}
-```
 
-</ToolLayout>
+## Features
+
+- **Decentralized Oracle Network:** Provides reliable and tamper-proof data feeds for smart contracts by leveraging a decentralized validator network.
+
+- **Provable Security:** The data requested dat aapproval relies on the distributed nodes of the chain where each signs the result with it’s ECDSA key.
+
+
+## Quickstart
+
+<Steps>
+
+1. Head [here](https://docs.razor.network/docs/consume-data-feeds/transparent-forwarder) to consume Razor price feeds.
+
+2. On this [page](https://docs.razor.network/docs/consume-data-feeds/deployment-details) can be find the chains details required for the price feeds.
+
+</Steps>
