--- a/src/content/docs/builders/tools/payments/transak.mdx
+++ b/src/content/docs/builders/tools/payments/transak.mdx
@@ -2,16 +2,41 @@
 title: Transak
 description: Intro to Transak
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
 Transak On-Ramp solution allows users to buy crypto assets with fiat.
 
 The Transak On-Ramp integration allows users to purchase Europa USDC with fiat.
 
+<CardGrid>
+  <LinkCard title="Website" href="https://transak.com/" />
+  <LinkCard title="Documentation" href="https://portal.skale.space/onramp" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
 ## Features
+
+- **On-Ramp:** Purchase USDC on SKALE Europa Hub with credit card
+
+- **Embeded On-ramp Widget:** Transak SDK integration on different platforms (ex: web, mobile, etc)
 
 ## Quickstart
 
-## Documentation
+To begin using Transak:
 
-For detailed instructions visit the [Transak documentation](https://portal.skale.space/onramp).
+<Steps>
+
+1. Go to the [SKALE Portal](https://portal.skale.space/)
+
+2. On the left side select [On-Ramp](https://portal.skale.space/onramp)
+
+3. Select the amount you want to pay
+
+4. Choose the payment method
+
+5. Select **Buy Now**
+
+</Steps>
+
