--- a/src/content/docs/builders/tools/wallets/ledger.mdx
+++ b/src/content/docs/builders/tools/wallets/ledger.mdx
@@ -2,46 +2,50 @@
 title: Ledger
 description: Intro to Ledger
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="It is a hardware wallet designed for secure cryptocurrency storage. It is a physical device that securely stores the user's private keys, which are essential for accessing and managing their cryptocurrencies.
-    Ledger wallets are known for their emphasis on security, providing an offline storage solution to protect digital assets from online threats such as hacking and malware."
-    toolName="Ledger"
-    toolLink="https://developers.ledger.com/docs/transport/overview/"
-    toolDocsLink="https://developers.ledger.com/docs/transport/overview/"
->
+It is a hardware wallet designed for secure cryptocurrency storage. It is a physical device that securely stores the user's private keys, which are essential for accessing and managing their cryptocurrencies.
+Ledger wallets are known for their emphasis on security, providing an offline storage solution to protect digital assets from online threats such as hacking and malware.
 
-## Implementation Example
+<CardGrid>
+  <LinkCard title="Website" href="https://www.ledger.com/" />
+  <LinkCard title="Documentation" href="https://developers.ledger.com/docs/transport/overview/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
+## Features
+
+- **Cold Storage Security:** Provides hardware wallet security for crypto asset storage.  
+- **Wide Asset Support:** Supports a broad range of cryptocurrencies and tokens.  
+- **Integration with dApps:** Easily connects with DeFi platforms and dApps via Ledger Live.  
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
 
-    If you want to use a Ledger Nano S/X/S Plus with the USB protocol
+1. Install the package:
 
-    ```shell
-    npm install @ledgerhq/hw-transport-webusb
-    ```
-    If you want to use a Ledger Nano S/X/S Plus with the HID protocol
+    <Tabs>
+        <TabItem label="Nano S/X/S Plus - USB protocol">
+        ```shell
+        npm install @ledgerhq/hw-transport-webusb
+        ```
+        </TabItem>
+        <TabItem label="Nano S/X/S Plus - HID protocol">
+        ```shell
+        npm install @ledgerhq/hw-transport-webhid
+        ```
+        </TabItem>
+    </Tabs>
 
-    ```shell
-    npm install @ledgerhq/hw-transport-webhid
-    ```
-
-2. ##### Integration
+2. Import the library and start using it:
+    
     ```javascript
     import TransportWebUSB from '@ledgerhq/hw-transport-webusb'
     import Eth from '@ledgerhq/hw-app-eth'
-
-    const transport = await TransportWebUSB.create();
-    const evm_ledger = new Eth(transport);
-
-    const path = "m/44'/60'/0'/0/0";
-
-    const result = await evm_ledger.getAddress(path, false, true);
-    console.log('Ledger Wallet Address:', result.address);
     ```
 </Steps>
-
-</ToolLayout>
