--- a/src/content/docs/builders/tools/wallets/metakeep.mdx
+++ b/src/content/docs/builders/tools/wallets/metakeep.mdx
@@ -2,24 +2,34 @@
 title: Metakeep
 description: Intro to Metakeep
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="MetaKeep user wallets are seamless non-custodial wallets fully owned by end users. Developers can use MetaKeep APIs and Client SDKs to interact with these wallets, obtaining user consent to perform operations.
-    MetaKeep offers API based wallets and functionality through abstracted hardware wallets.
-    This achieve this through the use of industry standard hardware wallets managed automatically by their service. Their reliable and cost-effective innovations promote mass adoption. Additionally, the team offers insurance polices to enhance user confidence.
-    "
-    toolName="Metakeep"
-    toolLink="https://docs.metakeep.xyz/docs/create-a-developer-account"
-    toolDocsLink="https://docs.metakeep.xyz/docs/create-a-developer-account"
->
+MetaKeep user wallets are seamless non-custodial wallets fully owned by end users. Developers can use MetaKeep APIs and Client SDKs to interact with these wallets, obtaining user consent to perform operations.
+MetaKeep offers API based wallets and functionality through abstracted hardware wallets.
+This achieve this through the use of industry standard hardware wallets managed automatically by their service. Their reliable and cost-effective innovations promote mass adoption. Additionally, the team offers insurance polices to enhance user confidence.
 
-## Implementation Example
+<CardGrid>
+  <LinkCard title="Website" href="https://metakeep.xyz/" />
+  <LinkCard title="Documentation" href="https://docs.metakeep.xyz/docs/create-a-developer-account" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
+
+## Features
+
+- **API-Based Non-Custodial Wallets:** Allows developers to easily integrate user-owned wallets using MetaKeep's APIs and SDKs for seamless operations.  
+
+- **Secure Hardware Wallet Integration:** Uses industry-standard hardware wallets managed automatically to ensure security and reliability, promoting user confidence with optional insurance coverage.  
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
+
+1. Install the package:
 
     <Tabs>
         <TabItem label="npm">
@@ -34,17 +44,6 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
         </TabItem>
     </Tabs>
 
-2. ##### Integration
-
-    ```javascript
-        const sdk = new MetaKeep({
-            appId: "get your appId in the developer console https://console.metakeep.xyz/",
-            user: {
-                email: "users email"
-            }
-        });
-    ```
+2. Get an AppId in the [developer console](https://console.metakeep.xyz/) and start using it.
 
 </Steps>
-
-</ToolLayout>
