--- a/src/content/docs/builders/tools/wallets/metamask.mdx
+++ b/src/content/docs/builders/tools/wallets/metamask.mdx
@@ -2,87 +2,52 @@
 title: MetaMask
 description: Intro to MetaMask
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="Metamask is a Chromium (Chrome, Brave, and Edge) and Firefox browser add-on that provides a non-custodial Ethereum wallet. An end-user's private key is stored in an encrypted Vault data stored in the browser.
-    Metamask allows you to integrate your dApp with SKALE by setting the Network RPC endpoint for your users. "
-    toolName="MetaMask"
-    toolLink="https://metamask.io/"
-    toolDocsLink="https://docs.metamask.io/wallet/"
->
+Metamask is a Chromium (Chrome, Brave, and Edge) and Firefox browser add-on that provides a non-custodial Ethereum wallet. An end-user's private key is stored in an encrypted Vault data stored in the browser.
+Metamask allows you to integrate your dApp with SKALE by setting the Network RPC endpoint for your users.
 
+<CardGrid>
+  <LinkCard title="Website" href="https://metamask.io/" />
+  <LinkCard title="Documentation" href="https://docs.metamask.io/wallet/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
 
-## Implementation Example
+## Features
+
+- **Browser Extension and Mobile App:** Provides easy access to Ethereum and other EVM-compatible networks.  
+- **dApp and Token Interaction:** Seamlessly connects with dApps and supports token management.  
+- **Custom Network Configuration:** Enables users to add and switch between custom blockchain networks.  
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
-    ```shell
-    npm install --save web3
+
+1. Install the package:
+
+    <Tabs>
+        <TabItem label="npm">
+        ```shell
+        npm i @metamask/sdk-react
+        ```
+        </TabItem>
+        <TabItem label="yarn">
+        ```shell
+        yarn add @metamask/sdk-react
+        ```
+        </TabItem>
+    </Tabs>
+
+2. Import the library and start using it:
+
+    ```ts
+    import { MetaMaskProvider } from "@metamask/sdk-react"
     ```
 
-2. ##### Integration
-    ```javascript
-    import Web3 from 'web3';
+3. Wrap your project with MetaMaskProvider
 
-    let web3 = "";
-
-    let switchToSKALE = {
-      chainId: "your chain id", //decodes to 1351057110
-      chainName: "SKALE Chain name",
-      rpcUrls: ["your_skale_network_rpc"],
-      nativeCurrency: {
-        name: "SKALE FUEL",
-        symbol: "sFUEL",
-        decimals: 18
-      },
-      blockExplorerUrls: [
-        "your_skale_network_explorer"
-      ]
-    };
-
-    web3 = window.web3;
-
-      if (window.ethereum) {
-        window.web3 = new Web3(window.ethereum);
-        try {
-          // Request account access if needed
-          await window.ethereum.enable();
-          console.log("MetaMask - Web3 Initialized!");
-
-          //Get user wallet accounts
-          window.web3.eth.getAccounts((error, accounts) => {
-            if (error) {
-              console.error(error);
-            }
-            console.log(accounts);
-
-            //request change to SKALE Network
-            window.ethereum
-              .request({
-                method: "wallet_addEthereumChain",
-                params: [switchToSKALE, accounts[0]]
-              })
-              .catch((error) => console.log(error.message));
-          });
-        } catch (error) {
-          // User denied account access...
-        }
-      }
-      // Legacy dapp browsers...
-      else if (window.web3) {
-        window.web3 = new Web3(web3.currentProvider);
-        console.log("MetaMask - Web3 Initialized!");
-      }
-      // Non-dapp browsers...
-      else {
-        console.log(
-          "Non-Web3 browser detected. You should consider trying MetaMask!"
-        );
-      }
-    ```
-  
 </Steps>
-
-</ToolLayout>
