--- a/src/content/docs/builders/tools/wallets/trezor.mdx
+++ b/src/content/docs/builders/tools/wallets/trezor.mdx
@@ -2,41 +2,40 @@
 title: Trezor
 description: Intro to Trezor
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="Trezor wallet is a hardware wallet designed for secure storage of cryptocurrencies. Similar to other hardware wallets, Trezor provides a physical device that stores the user's private keys offline, reducing the risk of exposure to online threats like hacking and malware."
-    toolName="Trezor"
-    toolLink="https://trezor.io/learn"
-    toolDocsLink="https://trezor.io/learn"
->
+Trezor wallet is a hardware wallet designed for secure storage of cryptocurrencies. Similar to other hardware wallets, Trezor provides a physical device that stores the user's private keys offline, reducing the risk of exposure to online threats like hacking and malware.
 
-## Implementation Example
+<CardGrid>
+  <LinkCard title="Website" href="https://trezor.io" />
+  <LinkCard title="Documentation" href="https://trezor.io/learn" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
+
+## Features
+
+- **Hardware Wallet Security:** Offers secure cold storage for cryptocurrencies, protecting private keys offline.  
+
+- **Multi-Currency Support:** Supports a wide range of cryptocurrencies and tokens.  
+
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
+
+1. Install the package:
+
     ```shell
     npm install @trezor/connect
     ```
-2. ##### Integration
-    ````javascript
+
+2. Import the library and start using it:
+    
+    ```javascript
     import TrezorApi from "trezor-connect";
-
-    const supportedNetworkURLs = {
-      your_chain_id_number: "your_skale_network_rpc"
-    };
-
-    const defaultNetwork = 1;
-
-    const Trezor = new TrezorConnector({
-      api: TrezorApi,
-      supportedNetworkURLs,
-      defaultNetwork,
-      manifestEmail: "test@gmail.com",
-      manifestAppUrl: "https://test.io/"
-    });
-    ````
+    ```
 </Steps>
-
-</ToolLayout>
