--- a/src/content/docs/builders/tools/wallets/wallet-connect.mdx
+++ b/src/content/docs/builders/tools/wallets/wallet-connect.mdx
@@ -2,59 +2,29 @@
 title: Wallet Connect
 description: Intro to Wallet Connect
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
-import {Steps} from "@astrojs/starlight/components";
-import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="The Wallet Connect is an open source protocol to link dApps to mobile wallets using deep linking, and allows you to integrate your dApp with SKALE."
-    toolName="Wallet Connect"
-    toolLink="https://docs.walletconnect.com/getting-started"
-    toolDocsLink="https://docs.walletconnect.com/getting-started"
->
+import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-## Implementation Example
+The Wallet Connect is an open source protocol to link dApps to mobile wallets using deep linking, and allows you to integrate your dApp with SKALE.
+
+<CardGrid>
+  <LinkCard title="Website" href="https://reown.com/" />
+  <LinkCard title="Documentation" href="https://docs.reown.com/" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
+## Features
+
+- **Multi-Wallet Compatibility:** Enables seamless connection between dApps and various wallets via QR code or deep linking.  
+
+- **Cross-Platform Support:** Works across mobile, web, and desktop environments for flexible usage.  
+
+## Quickstart
 
 <Steps>
 
-1. ##### Package Install
-
-    <Tabs>
-        <TabItem label="npm">
-        ```shell
-        npm install --save web3 @walletconnect/web3-provider
-
-        ```
-        </TabItem>
-        <TabItem label="yarn">
-        ```shell
-        yarn add --save web3 @walletconnect/web3-provider
-        ```
-        </TabItem>
-    </Tabs>
-
-2. ##### Integration
-  
-    ```javascript
-    import WalletConnectProvider from "@walletconnect/web3-provider";
-    import Web3 from 'web3';
-
-
-    // Your setup information
-    const endpoint = 'your_skale_network_rpc';             // your SKALE Chain endpoint
-    const ethereumEndpoint = 'https://your.ethereum.endpoint'   // your Ethereum endpoint
-    const skaleChainId = 123456                                 // chainId of your SKALE Chain
-
-    const provider = new WalletConnectProvider({
-        rpc: {
-          skaleChainId: endpoint,
-          4: ethereumEndpoint
-        }
-    });
-    await provider.enable();
-    const web3 = new Web3(provider);
-    ```
+1. Follow the guide described [here](https://docs.reown.com/appkit/overview).
 
 </Steps>
-
-</ToolLayout>
