--- a/src/content/docs/builders/tools/wallets/web3auth.mdx
+++ b/src/content/docs/builders/tools/wallets/web3auth.mdx
@@ -2,54 +2,35 @@
 title: Web3Auth
 description: Intro to Web3Auth
 ---
-import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+
 import { Steps } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-<ToolLayout
-    introParagraph="Pluggable wallet infrastructure for Web3 wallets and applications. It streamlines the onboarding of both mainstream and crypto native users in under a minute by providing experiences that they're most comfortable with.
-    Web3Auth's MPC-based wallet management infrastructure provides secure, non-custodial wallet management, where users maintain control of their cryptographic key pair. The login service only accesses a single share, preventing the provider from retrieving the user's wallet independently."
-    toolName="Web3Auth"
-    toolLink="https://web3auth.io/"
-    toolDocsLink="https://web3auth.io/docs/connect-blockchain/skale"
->
+Pluggable wallet infrastructure for Web3 wallets and applications. It streamlines the onboarding of both mainstream and crypto native users in under a minute by providing experiences that they're most comfortable with.
+    Web3Auth's MPC-based wallet management infrastructure provides secure, non-custodial wallet management, where users maintain control of their cryptographic key pair. The login service only accesses a single share, preventing the provider from retrieving the user's wallet independently.
 
-## Implementation Example
+<CardGrid>
+  <LinkCard title="Website" href="https://web3auth.io/" />
+  <LinkCard title="Documentation" href="https://web3auth.io/docs/connect-blockchain/skale" />
+  <LinkCard title="Recipe" description="Not ready yet but is coming very soon!"/>
+</CardGrid>
+
+
+## Features
+
+- **Simplified Authentication:** Provides seamless wallet creation with social logins like Google or Facebook.  
+
+- **Customizable UX:** Offers developers the flexibility to tailor the wallet authentication flow for their applications.  
+
+- **Multi-Chain Support:** Supports multiple blockchains for broad usability in Web3 projects.  
+
+## Quickstart
 
 <Steps>
-1. ##### Package Install
-    ```shell
-    npm install --save @web3auth/modal
-    ```
 
-2. ##### Client ID
-    Get your client ID under https://dashboard.web3auth.io/
+1. Head the [Web3Auth dashboard](https://dashboard.web3auth.io/login) to setup a verifier.
 
-3. ##### Integration
-    ```javascript
-    import { Web3Auth } from "@web3auth/modal";
-    import Web3 from "web3";
+2. Follow mpc wallet setup [guide](https://web3auth.io/docs/guides/mpc-core-kit).
 
-    const web3auth = new Web3Auth({
-      clientId: "BPi5PB_UiIZ-cPz1GtV5i1I2iOSOHuimiXBI0e-Oe_u6X3oVAbCiAZOTEBtTXw4tsluTITPqA8zMsfxIKMjiqNQ", // get it from Web3Auth Dashboard
-      web3AuthNetwork: "sapphire_mainnet",
-      chainConfig: {
-        chainNamespace: "eip155",
-        chainId: "0x50877ed6",
-        rpcTarget: "you_skale_chain_rpc",
-        // Avoid using public rpcTarget in production.
-        // Use services like Infura, Quicknode etc
-        displayName: "skale chain name",
-        blockExplorer: "your_skale_chain_explorer",
-        ticker: "sFUEL",
-        tickerName: "sFUEL",
-      },
-    });
-    await web3auth.initModal();
-
-    const web3authProvider = await web3auth.connect();
-
-    const web3 = new Web3(web3authProvider);
-    ```
 </Steps>
-
-</ToolLayout>
